# RayTracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: complex.json  general.json  refraction.json  scene1.json  scene3.json  scene4.json  scene5.json  scene6.json  spheres.json
include/properties/: objectProperties.json
include/scenes/: basicFeatures.json  booleanObjectTest.json  booleanObjectTest2.json  booleanObjectTest3.json  booleanObjectTest4.json  booleanObjectTest5.json  bowl.json  complex.json  cubesLighting.json  extraFeatures.json  general.json  marbleSolid.json  normalMapping.json  normalMappingTest.json  objectProperties.json  pacman.json  rainbowSolid.json  refraction.json  roughness.json  scene3.json  scene5.json  solidTextures.json  sphereReflectionSpecular.json  spheres.json  template.json  woodSolid.json
include/scenes/examples/: basicSpherePlaneReflShadows.json  booleanDifference.json  booleanDifference2.json  booleanIntersection.json  checkerSolid.json  imageSolid.json  marbleSolid.json  solidTextures.json  solidTexturesSphere.json  woodSolid.json
src/: Camera.cpp  Camera.h  Collision.cpp  Collision.h  Cube.cpp  Cube.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Transformation.cpp  Transformation.h  Vec3.cpp  Vec3.h  helpers.cpp  helpers.h  settings.h
src/Colors/: CheckerBoard.cpp  CheckerBoard.h  Color.h  ImageColor.cpp  ImageColor.h  Marble.cpp  Marble.h  RainbowColor.cpp  RainbowColor.h  SingleColor.cpp  SingleColor.h  WoodGrain.cpp  WoodGrain.h
src/Math/: Matrix4.cpp  Matrix4.h  Noise.cpp  Noise.h  Utils.cpp  Utils.h  Vec4.cpp  Vec4.h
src/Normal/: normalImage.cpp  normalImage.h  normalManipulator.h  normalRoughness.cpp  normalRoughness.h
src/Objects/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  LightSource.cpp  LightSource.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h  objectProperties.h
src/Objects/Boolean/: BooleanObject.cpp  BooleanObject.h  DifferenceBool.cpp  DifferenceBool.h  IntersectionBool.cpp  IntersectionBool.h  UnionBool.cpp  UnionBool.h
